@@ -1,3 +1,11 @@
+2009-09-23  Jie Zhang  <jie.zhang@analog.com>
+
+	* elf32-bfin.c (_bfinfdpic_size_got_plt): Make sure empty
+	.rel.plt and .plt sections are removed.
+	(elf32_bfinfdpic_size_dynamic_sections): Remove empty .dynbss
+	section.  Remove the duplicated removing of empty .rel.plt
+	section.
+
 2009-09-21  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Extend previous
